fixing missing x on mobile

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1773,6 +1773,14 @@ footer .copyright {
 
 @media only screen and (max-width: 768px) {
 
+  .popup {
+    width: 100%;
+  }
+
+  .popup button {
+    left: 80%;
+  }
+
   .slide1 .slide-content h3 {
     font-size: 3em;
   }
